compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__const_multiple_errors_are_local_with_unbound_value.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1498
expression: "const lst = [1, 2.0]\nconst unbound: MyInvalidType = MyInvalidType\nconst assignment1: String = lst\nconst assignment2: String = unbound"
snapshot_kind: text
---
----- SOURCE CODE
const lst = [1, 2.0]
const unbound: MyInvalidType = MyInvalidType
const assignment1: String = lst
const assignment2: String = unbound

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:17
  │
1 │ const lst = [1, 2.0]
  │                 ^^^

Expected type:

    Int

Found type:

    Float

error: Unknown type
  ┌─ /src/one/two.gleam:2:16
  │
2 │ const unbound: MyInvalidType = MyInvalidType
  │                ^^^^^^^^^^^^^

The type `MyInvalidType` is not defined or imported in this module.

error: Unknown variable
  ┌─ /src/one/two.gleam:2:32
  │
2 │ const unbound: MyInvalidType = MyInvalidType
  │                                ^^^^^^^^^^^^^

The custom type variant constructor `MyInvalidType` is not in scope here.

error: Type mismatch
  ┌─ /src/one/two.gleam:3:29
  │
3 │ const assignment1: String = lst
  │                             ^^^

Expected type:

    String

Found type:

    List(Int)
